Update Web Trial 2 Destination.html

--- a/Web Trial 2 Destination.html
+++ b/Web Trial 2 Destination.html
@@ -27,28 +27,28 @@
             <div class="card">
 			<ul class="Destination-links">
             <li><a href="Destination Paris.html">
-                    <img src="E:\Users\JOHN MWAKIA\OneDrive\One Drive\OneDrive\Desktop\John-ICT-600-M23-004\Travel Website\Web trial images\23.jpg" alt="23.jpg">
+                    <img src="https://github.com/Hamilton-bit/Travel-Zone/blob/main/Web%20trial%20images/23.jpg" alt="23.jpg">
                     <h3>Paris, France</h3>
                     <p>The city of lights and love.</p>
                 </a></li>
             </div>
             <div class="card">
                 <a href="Destination Tokyo.html">
-                    <img src="C:\Users\JOHN MWAKIA\OneDrive\One Drive\OneDrive\Desktop\John-ICT-600-M23-004\Travel Website\Web trial images\22.jpg" alt="22.jpg">
+                    <img src="https://github.com/Hamilton-bit/Travel-Zone/blob/main/Web%20trial%20images/22.jpg" alt="22.jpg">
                     <h3>Tokyo, Japan</h3>
                     <p>A perfect blend of tradition and modernity.</p>
                 </a>
             </div>
             <div class="card">
                 <a href="Destination New York.html">
-                    <img src="C:\Users\JOHN MWAKIA\OneDrive\One Drive\OneDrive\Desktop\John-ICT-600-M23-004\Travel Website\Web trial images\23.jpg" alt="23.jpg">
+                    <img src="https://github.com/Hamilton-bit/Travel-Zone/blob/main/Web%20trial%20images/23.jpg" alt="23.jpg">
                     <h3>New York, USA</h3>
                     <p>The city that never sleeps.</p>
                 </a>
             </div>
             <div class="card">
                 <a href="Destination Sydney.html">
-                    <img src="C:\Users\JOHN MWAKIA\OneDrive\One Drive\OneDrive\Desktop\John-ICT-600-M23-004\Travel Website\Web trial images\24.jpg" alt="24.jpg">
+                    <img src="https://github.com/Hamilton-bit/Travel-Zone/blob/main/Web%20trial%20images/24.jpg" alt="24.jpg">
                     <h3>Sydney, Australia</h3>
                     <p>Home to the iconic Sydney Opera House.</p>
                 </a>
