Update Web Trial 2 Destination.html

--- a/Web Trial 2 Destination.html
+++ b/Web Trial 2 Destination.html
@@ -27,7 +27,7 @@
             <div class="card">
 			<ul class="Destination-links">
             <li><a href="Destination Paris.html">
-                    <img src="https://github.com/Hamilton-bit/Travel-Zone/blob/main/Web%20trial%20images/23.jpg" alt="23.jpg">
+                    <img src="Web trial images/23.jpg" alt="23.jpg">
                     <h3>Paris, France</h3>
                     <p>The city of lights and love.</p>
                 </a></li>
